Notificações em inglês e collapse

--- a/changelog.html
+++ b/changelog.html
@@ -94,6 +94,16 @@
                                 </div>
                                 <div id="collapse2" class="panel-collapse collapse text-justify">
                                     <div class="panel-body">
+                                        <p><b>21/01/2018</b></p>
+                                        <ul>
+                                            <li>Collapse nas páginas principais.</li>
+                                            <li>Botões do collapse mais bonitos.</li>
+                                            <li>Código js revisado; agora os métodos da página, que não são importantes para os scripts de regressão e de leitura de dados estão devidamente separados no main.js.</li>
+                                            <li>Textos de notificação de resultados e do gerador agora também em inglês.</li>
+                                        </ul> 
+                                    </div>
+
+                                    <div class="panel-body">
                                         <p><b>20/01/2018</b></p>
                                         <ul>
                                             <li>script do loadFile recebe o id do elemento html para ler, possibilitando várias caixas de leitura em uma mesma página.</li>
