--- a/input-examples-en.html
+++ b/input-examples-en.html
@@ -590,7 +590,7 @@
                     </div>
     
                     <div class="col-lg-6">
-                        <button type="button" class="btn btn-primary btn-lg btn-block" onclick="generateLines()">Generate Table</button>
+                        <button type="button" class="btn btn-primary btn-lg btn-block" onclick="generateLines('ing')">Generate Table</button>
                         <br>
                         <input type="range" min="1" max="40" value="10" class="slider" step="2" id="range">
                         <input type="checkbox" id="noise" value="true">
