--- a/input-examples.html
+++ b/input-examples.html
@@ -618,7 +618,7 @@
                     </div>
     
                     <div class="col-lg-6">
-                        <button type="button" class="btn btn-primary btn-lg btn-block" onclick="generateLines()">Criar tabela</button>
+                        <button type="button" class="btn btn-primary btn-lg btn-block" onclick="generateLines('pt')">Criar tabela</button>
                         <br>
                         <input type="range" min="1" max="40" value="10" class="slider" step="2" id="range">
                         <input type="checkbox" id="noise" value="true">
