--- a/changelog.html
+++ b/changelog.html
@@ -64,15 +64,11 @@
 
                                     <div class="panel-body">Criar um painel onde o usuário possa escolher por conta própria os parâmetros passados para cada algoritmo de regressão simbólica.</div>
 
-                                    <div class="panel-body">Ver se as grids do bootstrap não extrapolam os limites da página em diferentes resoluções de tela.</div>
-
                                     <div class="panel-body">Debugar o código para encontrar os pontos onde existem comandos inalcanáveis devido a "return".</div>
 
                                     <div class="panel-body">Criar uma pasta com a versão final do IC quando foi submetido o artigo.</div>
 
                                     <div class="panel-body">Fazer com que inputpoints seja ou global ou sempre passado como parâmetro no construtor de todos os métodos de regressão simbólica, para unificar o código e evitar problemas.</div>
-
-                                    <div class="panel-body">Colocar um readme no repositório do git.</div>
 
                                     <div class="panel-body">Otimizar a página para ser encontrada por sites de busca (meta content, description, etc).</div>
 
@@ -93,6 +89,12 @@
                                     <a class="panel-title" data-toggle="collapse" href="#collapse2"><span class="glyphicon glyphicon-list-alt"></span> <strong>Expandir lista</strong> (show updates list)</a>
                                 </div>
                                 <div id="collapse2" class="panel-collapse collapse text-justify">
+                                    <div class="panel-body">
+                                        <p><b>11/02/2018</b></p>
+                                        <ul>
+                                            <li>Colocar um readme no repositório do git.</li>
+                                        </ul>
+                                    </div>
                                     <div class="panel-body">
                                         <p><b>21/01/2018</b></p>
                                         <ul>
