corrigido bug na pagina de performance

--- a/changelog.html
+++ b/changelog.html
@@ -58,13 +58,7 @@
                                     <a class="panel-title" data-toggle="collapse" href="#collapse1"><span class="glyphicon glyphicon-list-alt"></span> <strong>Expandir lista</strong> (show to-do list)</a>
                                 </div>
                                 <div id="collapse1" class="panel-collapse collapse text-justify">
-                                    <div class="panel-body">Revisar o código em js.</div>
-
-                                    <div class="panel-body">Fazer debug cuidadoso para ver se a última modificação no core da regressão simbólica não criou problemas (o IT recebe um coef no construtor, definido para 1 caso não seja passado; e quando retorna uma cópia, envia a cópia com seu atual coeficiente (a copia não começa com um coef =1, como antes)).</div>
-
                                     <div class="panel-body">Criar um painel onde o usuário possa escolher por conta própria os parâmetros passados para cada algoritmo de regressão simbólica.</div>
-
-                                    <div class="panel-body">Debugar o código para encontrar os pontos onde existem comandos inalcanáveis devido a "return".</div>
 
                                     <div class="panel-body">Criar uma pasta com a versão final do IC quando foi submetido o artigo.</div>
 
@@ -90,11 +84,21 @@
                                 </div>
                                 <div id="collapse2" class="panel-collapse collapse text-justify">
                                     <div class="panel-body">
+                                        <p><b>08/03/2018</b></p>
+                                        <ul>
+                                            <li>Código debugado.</li>
+                                            <li>Página de teste de performance corrigida.</li>
+                                            <li>Versão beta em progresso (60%): revisão, refinamento e documentação de todos os códigos.</li>
+                                        </ul>
+                                    </div>
+
+                                    <div class="panel-body">
                                         <p><b>11/02/2018</b></p>
                                         <ul>
                                             <li>Colocar um readme no repositório do git.</li>
                                         </ul>
                                     </div>
+
                                     <div class="panel-body">
                                         <p><b>21/01/2018</b></p>
                                         <ul>
