--- a/performance-test.html
+++ b/performance-test.html
@@ -73,8 +73,8 @@
                     <label for="labeled">Usar a primeira linha da entrada como rótulo?</label>
 
                     <div class="row">
-                        <div class="col-lg-6"><button type="button" class="btn btn-primary btn-lg btn-block" onclick="manual_upload()">Usar valores digitados</button></div>
-                        <div class="col-lg-6"><button type="button" class="btn btn-info btn-lg btn-block" onclick="csv_upload()">Usar arquivo enviado</button></div>
+                        <div class="col-lg-6"><button type="button" class="btn btn-primary btn-lg btn-block" onclick="manual_upload('my-manualinput')">Usar valores digitados</button></div>
+                        <div class="col-lg-6"><button type="button" class="btn btn-info btn-lg btn-block" onclick="csv_upload('my-csvinput')">Usar arquivo enviado</button></div>
                     </div>
                 </p>
 
