--- a/changelog.html
+++ b/changelog.html
@@ -84,6 +84,13 @@
                                 </div>
                                 <div id="collapse2" class="panel-collapse collapse text-justify">
                                     <div class="panel-body">
+                                        <p><b>10/03/2018</b></p>
+                                        <ul>
+                                            <li>Corrigido problema do google analytics.</li>
+                                        </ul>
+                                    </div>
+
+                                    <div class="panel-body">
                                         <p><b>08/03/2018</b></p>
                                         <ul>
                                             <li>Código debugado.</li>
