escolha de exemplos

--- a/index.html
+++ b/index.html
@@ -115,8 +115,9 @@
                     <input type="checkbox" id="labeled" value="true">
                     <label for="labeled">Usar a primeira linha da entrada como rótulo?</label>
                     <div class="row">
-                        <div class="col-lg-6"><button type="button" class="btn btn-primary btn-lg btn-block" onclick="user_upload('my-manualinput', 'pt', 'manual');">Usar valores digitados</button></div>
-                        <div class="col-lg-6"><button type="button" class="btn btn-info btn-lg btn-block" onclick="user_upload('my-csvinput', 'pt', 'csv');">Usar arquivo enviado</button></div>
+                        <div class="col-lg-4"><p><button type="button" class="btn btn-primary btn-lg btn-block" onclick="user_upload('my-manualinput', 'pt', 'manual');">Usar valores digitados</button></p></div>
+                        <div class="col-lg-4"><p><button type="button" class="btn btn-info btn-lg btn-block" onclick="user_upload('my-csvinput', 'pt', 'csv');">Usar arquivo enviado</button></p></div>
+                        <div class="col-lg-4"><p><button type="button" class="btn btn-info btn-lg btn-block" onclick="get_example('my-manualinput', 'pt', 'manual')">Escolhi um examplo</button></p></div>
                     </div>
                 </p>
                 <div id="notification"></div>
