--- a/input-examples.html
+++ b/input-examples.html
@@ -102,7 +102,7 @@
                             <tr><td>0.1</td><td>7.25</td><td>7.110075</td></tr>
                             <tr><td>0.7</td><td>5.75</td><td>39.473175</td></tr>
                             <tr><td>0.35</td><td>5.5</td><td>18.878475</td></tr>
-                            <caption class="text-center">Variação de pressão vertical num fluido:<br>&Delta;P = &rho;&middot;g<sub>(m/s)</sub>&middot;&Delta;h</caption>
+                            <caption class="text-center">Variação de pressão vertical num fluido:<br>&Delta;P = &rho;&middot;g<sub>(m/s)</sub>&middot;&Delta;h <button onclick="set_example(this.parentElement.parentElement)"><span class="glyphicon glyphicon-share"></span></button></caption>
                         </table>
                     </div>
                     <div class="col-lg-4">
@@ -128,7 +128,7 @@
                             <tr><td>140</td><td>1.258257252e+19</td></tr>
                             <tr><td>150</td><td>1.34813277e+19</td></tr>
                             <tr><td>100</td><td>8.9875518e+18</td></tr>
-                            <caption class="text-center">Equivalência de massa e energia:<br>E = m&middot;c<sup>2</sup></caption>
+                            <caption class="text-center">Equivalência de massa e energia:<br>E = m&middot;c<sup>2</sup> <button onclick="set_example(this.parentElement.parentElement)"><span class="glyphicon glyphicon-share"></span></button></caption>
                         </table>
                     </div>
                     <div class="col-lg-4">
@@ -154,7 +154,7 @@
                             <tr><td>95.0</td><td>92.5</td><td>6015043.75</td></tr>
                             <tr><td>85.0</td><td>70.0</td><td>2332400.0</td></tr>
                             <tr><td>37.5</td><td>90.0</td><td>2187000.0</td></tr>                      
-                            <caption class="text-center">Momento de inércia em um retângulo:<br>I<sub>x</sub>= (1/12)&middot;b&middot;h<sup>3</sup></caption>
+                            <caption class="text-center">Momento de inércia em um retângulo:<br>I<sub>x</sub>= (1/12)&middot;b&middot;h<sup>3</sup> <button onclick="set_example(this.parentElement.parentElement)"><span class="glyphicon glyphicon-share"></span></button></caption>
                         </table>
                     </div>
                     <div class="col-lg-4">
@@ -180,7 +180,7 @@
                             <tr><td>1.1</td><td>22.5</td><td>24.75</td></tr>
                             <tr><td>0.75</td><td>27.5</td><td>20.625</td></tr>
                             <tr><td>0.2</td><td>85.0</td><td>17.0</td></tr>
-                            <caption class="text-center">Lei de Hooke:<br>F = k&middot;&Delta;l</caption>
+                            <caption class="text-center">Lei de Hooke:<br>F = k&middot;&Delta;l <button onclick="set_example(this.parentElement.parentElement)"><span class="glyphicon glyphicon-share"></span></button></caption>
                         </table>
                     </div>
                     <div class="col-lg-4">
@@ -206,7 +206,7 @@
                             <tr><td>92.5</td><td>57.5</td><td>5318.75</td></tr>
                             <tr><td>70.0</td><td>42.5</td><td>2975.0</td></tr>
                             <tr><td>75.0</td><td>67.5</td><td>5062.5</td></tr>
-                            <caption class="text-center">Área de um retângulo:<br>A = b&middot;h</caption>
+                            <caption class="text-center">Área de um retângulo:<br>A = b&middot;h <button onclick="set_example(this.parentElement.parentElement)"><span class="glyphicon glyphicon-share"></span></button></caption>
                         </table>
                     </div>
                     <div class="col-lg-4">
@@ -232,7 +232,7 @@
                             <tr><td>27.5</td><td>40.0</td><td>-0.25</td><td>-275.0</td></tr>
                             <tr><td>35.0</td><td>77.5</td><td>0.25</td><td>678.125</td></tr>
                             <tr><td>20.0</td><td>55.0</td><td>-0.5</td><td>-550.0</td></tr>                   
-                            <caption class="text-center">Trabalho:<br>W = F&middot;&Delta;s&middot;cos(&Theta;)</caption>
+                            <caption class="text-center">Trabalho:<br>W = F&middot;&Delta;s&middot;cos(&Theta;) <button onclick="set_example(this.parentElement.parentElement)"><span class="glyphicon glyphicon-share"></span></button></caption>
                         </table>
                     </div>
                     <div class="col-lg-4">
@@ -258,7 +258,7 @@
                             <tr><td>85</td><td>398</td><td>1.5</td><td>187521.900227</td></tr>
                             <tr><td>175</td><td>433</td><td>6.5</td><td>96929.0251462</td></tr>
                             <tr><td>205</td><td>403</td><td>5.75</td><td>119462.698047</td></tr>
-                            <caption class="text-center">Lei dos gases ideais:<br>P = n&middot;R&middot;T/v</caption>
+                            <caption class="text-center">Lei dos gases ideais:<br>P = n&middot;R&middot;T/v <button onclick="set_example(this.parentElement.parentElement)"><span class="glyphicon glyphicon-share"></span></button></caption>
                         </table>
                     </div>
                     <div class="col-lg-4">
@@ -284,7 +284,7 @@
                             <tr><td>45.0</td><td>13.4591597296</td></tr>
                             <tr><td>10.0</td><td>6.34470874257</td></tr>
                             <tr><td>25.0</td><td>10.0318653585</td></tr>
-                            <caption class="text-center">Período pendular:<br>T = 2&middot;&pi;&middot;&radic;(L/g)</caption>
+                            <caption class="text-center">Período pendular:<br>T = 2&middot;&pi;&middot;&radic;(L/g) <button onclick="set_example(this.parentElement.parentElement)"><span class="glyphicon glyphicon-share"></span></button></caption>
                         </table>
                     </div>
                     <div class="col-lg-4">
@@ -310,7 +310,7 @@
                             <tr><td>85</td><td>46</td><td>10</td><td>47.0</td></tr>
                             <tr><td>34</td><td>19</td><td>5</td><td>19.333</td></tr>
                             <tr><td>10</td><td>10</td><td>10</td><td>10.0</td></tr>
-                            <caption class="text-center">Média aritmética simples:<br>m = ( &Sigma; x<sub>i</sub> )/n</caption>
+                            <caption class="text-center">Média aritmética simples:<br>m = ( &Sigma; x<sub>i</sub> )/n <button onclick="set_example(this.parentElement.parentElement)"><span class="glyphicon glyphicon-share"></span></button></caption>
                         </table>
                     </div>
                     <div class="col-lg-4">
@@ -336,7 +336,7 @@
                             <tr><td>4.5</td><td>254.468952</td></tr>
                             <tr><td>21.5</td><td>5808.803608</td></tr>
                             <tr><td>33.5</td><td>14102.606488</td></tr>
-                            <caption class="text-center">Área superficial de uma esfera:<br>A = 4&middot;&pi;&middot;r<sup>2</sup></caption>
+                            <caption class="text-center">Área superficial de uma esfera:<br>A = 4&middot;&pi;&middot;r<sup>2</sup> <button onclick="set_example(this.parentElement.parentElement)"><span class="glyphicon glyphicon-share"></span></button></caption>
                         </table>
                     </div>
                     <div class="col-lg-4">
@@ -362,7 +362,7 @@
                             <tr><td>36.0</td><td>0</td><td>8143.006464</td></tr>
                             <tr><td>18.0</td><td>42</td><td>6785.83872</td></tr>
                             <tr><td>28.5</td><td>10</td><td>6894.223644</td></tr>
-                            <caption class="text-center">Área superficial de uma cilindro:<br>A = 2&middot;&pi;&middot;r<sup>2</sup> + 2&middot;&pi;&middot;r&middot;h</caption>
+                            <caption class="text-center">Área superficial de uma cilindro:<br>A = 2&middot;&pi;&middot;r<sup>2</sup> + 2&middot;&pi;&middot;r&middot;h <button onclick="set_example(this.parentElement.parentElement)"><span class="glyphicon glyphicon-share"></span></button></caption>
                         </table>
                     </div>
                     <div class="col-lg-4">
@@ -388,7 +388,7 @@
                             <tr><td>1.85</td><td>97.5</td><td>8793.28125</td></tr>
                             <tr><td>0.65</td><td>60.0</td><td>1170.0</td></tr>
                             <tr><td>0.3</td><td>47.5</td><td>338.4375</td></tr>
-                            <caption class="text-center">Energia potencial elástica:<br>E = 0.5&middot;k&middot;&Delta;l<sup>2</sup></caption>
+                            <caption class="text-center">Energia potencial elástica:<br>E = 0.5&middot;k&middot;&Delta;l<sup>2</sup> <button onclick="set_example(this.parentElement.parentElement)"><span class="glyphicon glyphicon-share"></span></button></caption>
                         </table>
                     </div>
                     <div class="col-lg-4">
@@ -414,7 +414,7 @@
                             <tr><td>9.0</td><td>0.8</td><td>11.25</td></tr>
                             <tr><td>6.5</td><td>0.2</td><td>32.5</td></tr>
                             <tr><td>6.75</td><td>0.65</td><td>10.384</td></tr>
-                            <caption class="text-center">Densidade:<br>&rho; = m/V</caption>
+                            <caption class="text-center">Densidade:<br>&rho; = m/V <button onclick="set_example(this.parentElement.parentElement)"><span class="glyphicon glyphicon-share"></span></button></caption>
                         </table>
                     </div>
                     <div class="col-lg-4">
@@ -440,7 +440,7 @@
                             <tr><td>8.34e-06</td><td>9.4e-11</td><td>113.932789921</td></tr>
                             <tr><td>7.03e-06</td><td>6.3e-11</td><td>116.225625374</td></tr>
                             <tr><td>9.89e-06</td><td>7.7e-11</td><td>117.632292817</td></tr>
-                            <caption class="text-center">Intensidade sonora:<br>&beta; = (10dB)&middot;log(I/I<sub>0</sub>)</caption>
+                            <caption class="text-center">Intensidade sonora:<br>&beta; = (10dB)&middot;log(I/I<sub>0</sub>) <button onclick="set_example(this.parentElement.parentElement)"><span class="glyphicon glyphicon-share"></span></button></caption>
                         </table>
                     </div>
                 </div>
@@ -476,7 +476,7 @@
                             <tr><td>100</td><td>75</td><td>42.86</td></tr>
                             <tr><td>150</td><td>120</td><td>66.67</td></tr>
                             <tr><td>180</td><td>105</td><td>66.32</td></tr>
-                            <caption class="text-center">Lei de Ohm:<br>R<sub>t</sub> = 1 / (1/R<sub>1</sub> + 1/R<sub>2</sub>)</caption>
+                            <caption class="text-center">Lei de Ohm:<br>R<sub>t</sub> = 1 / (1/R<sub>1</sub> + 1/R<sub>2</sub>) <button onclick="set_example(this.parentElement.parentElement)"><span class="glyphicon glyphicon-share"></span></button></caption>
                         </table>
                     </div>
                     <div class="col-lg-4">
@@ -500,7 +500,7 @@
                             <tr><td>32</td><td>135</td><td>138.740765458</td></tr>
                             <tr><td>22</td><td>55</td><td>59.2368128785</td></tr>
                             <tr><td>88</td><td>80</td><td>118.928549979</td></tr>
-                            <caption class="text-center">Teorema de pitágoras:<br>c = &radic;(a<sup>2</sup> + b<sup>2</sup>)</caption>
+                            <caption class="text-center">Teorema de pitágoras:<br>c = &radic;(a<sup>2</sup> + b<sup>2</sup>) <button onclick="set_example(this.parentElement.parentElement)"><span class="glyphicon glyphicon-share"></span></button></caption>
                         </table>
                     </div>
                     <div class="col-lg-4">
@@ -524,7 +524,7 @@
                             <tr><td>750</td><td>75</td><td>5.66</td><td>45676.3249939</td></tr>
                             <tr><td>990</td><td>60</td><td>0.1</td><td>59103.2474175</td></tr>
                             <tr><td>270</td><td>25</td><td>0.61</td><td>5532.62412046</td></tr>
-                            <caption class="text-center">Trabalho:<br>W = F&middot;&Delta;s&middot;cos(&Theta;)</caption>
+                            <caption class="text-center">Trabalho:<br>W = F&middot;&Delta;s&middot;cos(&Theta;) <button onclick="set_example(this.parentElement.parentElement)"><span class="glyphicon glyphicon-share"></span></button></caption>
                         </table>
                     </div>
                     <div class="col-lg-4">
@@ -549,7 +549,7 @@
                             <tr><td>3</td><td>20</td><td>11</td><td>-5.443941</td></tr>
                             <tr><td>16</td><td>26</td><td>1</td><td>-10.09092</td></tr>
                             <tr><td>8</td><td>48</td><td>5</td><td>-6.786609</td></tr>
-                            <caption class="text-center">Fórmula de Bhaskara:<br>x0 = (-b&#8723;&radic;(b<sup>2</sup>-4&middot;a&middot;c))/2a</caption>
+                            <caption class="text-center">Fórmula de Bhaskara:<br>x0 = (-b&#8723;&radic;(b<sup>2</sup>-4&middot;a&middot;c))/2a <button onclick="set_example(this.parentElement.parentElement)"><span class="glyphicon glyphicon-share"></span></button></caption>
                         </table>
                     </div>
                     <div class="col-lg-4">
@@ -574,7 +574,7 @@
                             <tr><td>32</td><td>2</td><td>0.998044963917</td></tr>
                             <tr><td>18</td><td>3</td><td>0.986013297183</td></tr>
                             <tr><td>13</td><td>12</td><td>0.384615384615</td></tr>
-                            <caption class="text-center">Excentricidade da elipse:<br>e = &radic;(1 - b<sup>2</sup>/a<sup>2</sup>)</caption>
+                            <caption class="text-center">Excentricidade da elipse:<br>e = &radic;(1 - b<sup>2</sup>/a<sup>2</sup>) <button onclick="set_example(this.parentElement.parentElement)"><span class="glyphicon glyphicon-share"></span></button></caption>
                         </table>
                     </div>
                     <div class="col-lg-4">
@@ -599,7 +599,7 @@
                             <tr><td>491000</td><td>96000</td><td>491000.025174</td></tr>
                             <tr><td>236000</td><td>29000</td><td>236000.001104</td></tr>
                             <tr><td>168000</td><td>198000</td><td>168000.036641</td></tr>
-                            <caption class="text-center">Dilatação do tempo:<br>&Delta;t' = &Delta;t/&radic;(1 - v<sup>2</sup>/c<sup>2</sup>)</caption>
+                            <caption class="text-center">Dilatação do tempo:<br>&Delta;t' = &Delta;t/&radic;(1 - v<sup>2</sup>/c<sup>2</sup>) <button onclick="set_example(this.parentElement.parentElement)"><span class="glyphicon glyphicon-share"></span></button></caption>
                         </table>
                     </div>
                 </div>
