--- a/index-en.html
+++ b/index-en.html
@@ -115,8 +115,9 @@
                     <label for="noise">Use first line as variable names?</label>
 
                     <div class="row">
-                        <div class="col-lg-6"><button type="button" class="btn btn-primary btn-lg btn-block" onclick="user_upload('my-manualinput', 'ing', 'manual');">Use typed values</button></div>
-                        <div class="col-lg-6"><button type="button" class="btn btn-info btn-lg btn-block" onclick="user_upload('my-csvinput', 'ing', 'csv');">Use local file</button></div>
+                        <div class="col-lg-4"><p><button type="button" class="btn btn-primary btn-lg btn-block" onclick="user_upload('my-manualinput', 'ing', 'manual');">Use typed values</button></p></div>
+                        <div class="col-lg-4"><p><button type="button" class="btn btn-info btn-lg btn-block" onclick="user_upload('my-csvinput', 'ing', 'csv');">Use local file</button></p></div>
+                        <div class="col-lg-4"><p><button type="button" class="btn btn-info btn-lg btn-block" onclick="get_example('my-manualinput', 'ing', 'manual');">I've chosen an example</button></p></div>
                     </div>
                 </p>
 
@@ -167,15 +168,15 @@
                 
                 <div class="row">
                     <div class="col-lg-4">
-                        <p class="text-justify"><b>Algoritmo SymTree</b></p>
+                        <p class="text-justify"><b>Algorithm SymTree</b></p>
                         <p class="text-justify">This algorithm starts with a single solution representing a simple linear regression. At every iteration it improves the current expression by applying interaction and transformation operators on their current terms. More details can be seen at: </p>
                     </div>
                     <div class="col-lg-4">
-                        <p class="text-justify"><b>Algoritmo IT-LS</b></p>
+                        <p class="text-justify"><b>Algorithm IT-LS</b></p>
                         <p class="text-justify">This algorithm first creates an initial population of random solutions and choose the best one among them. Afterwards, it runs a simple best first local search with the neighborhood defined as the change in a polynomial degree or change in transformation function.</p>
                     </div>
                     <div class="col-lg-4">
-                        <p class="text-justify"><b>Algoritmo IT-ES</b></p>
+                        <p class="text-justify"><b>Algorithm IT-ES</b></p>
                         <p class="text-justify">This is a simple Evolutionary Strategies adapted from IT-LS using ES(mu, sigma) strategy.</p>
                     </div>
                 </div>
